Создано с помощью Colaboratory

--- a/DoublyLinkedList.ipynb
+++ b/DoublyLinkedList.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMpHO6ZssNA38hiFpcFSEiV",
+      "authorship_tag": "ABX9TyPFkVLMfn0McOzf0oiBSqsp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "pCZd54HOZcV0",
-        "outputId": "f0883fdd-c17c-4904-854b-fade889899cf"
+        "outputId": "a667e26b-19fd-464b-d5c7-f256a42cb941"
       },
       "outputs": [
         {
@@ -58,24 +58,29 @@
         "class DoublyLinkedList:\n",
         "    def __init__(self):\n",
         "        self.head = None\n",
+        "        self.tail = None\n",
         " \n",
         "    def append(self, data):\n",
         "        new_node = Node(data)\n",
         "        if self.head is None:\n",
         "            self.head = new_node\n",
+        "            self.tail = new_node\n",
         "            return\n",
         "        last_node = self.head\n",
         "        while last_node.next:\n",
         "            last_node = last_node.next\n",
         "        last_node.next = new_node\n",
         "        new_node.prev = last_node\n",
+        "        self.tail = new_node\n",
         " \n",
         "    def prepend(self, data):\n",
         "        new_node = Node(data)\n",
         "        new_node.next = self.head\n",
-        "        if self.head:\n",
+        "        if self.head is not None:\n",
         "            self.head.prev = new_node\n",
         "        self.head = new_node\n",
+        "        if self.tail is None:\n",
+        "            self.tail = new_node\n",
         " \n",
         "    def insert_after_node(self, prev_node, data):\n",
         "        if not prev_node:\n",
@@ -85,15 +90,19 @@
         "        new_node.next = prev_node.next\n",
         "        prev_node.next = new_node\n",
         "        new_node.prev = prev_node\n",
-        "        if new_node.next:\n",
+        "        if new_node.next is not None:\n",
         "            new_node.next.prev = new_node\n",
         " \n",
         "    def delete_node(self, key):\n",
         "        cur_node = self.head\n",
         "        if cur_node and cur_node.data == key:\n",
-        "            if cur_node.next:\n",
-        "                cur_node.next.prev = None\n",
-        "            self.head = cur_node.next\n",
+        "            if cur_node.next is None:\n",
+        "                self.head = None\n",
+        "                self.tail = None\n",
+        "            else:\n",
+        "                next_node = cur_node.next\n",
+        "                next_node.prev = None\n",
+        "                self.head = next_node\n",
         "            cur_node = None\n",
         "            return\n",
         "        prev = None\n",
@@ -102,17 +111,24 @@
         "            cur_node = cur_node.next\n",
         "        if cur_node is None:\n",
         "            return\n",
-        "        if cur_node.next:\n",
+        "        if cur_node.next is None:\n",
+        "            prev.next = None\n",
+        "            self.tail = prev\n",
+        "        else:\n",
+        "            prev.next = cur_node.next\n",
         "            cur_node.next.prev = prev\n",
-        "        prev.next = cur_node.next\n",
         "        cur_node = None\n",
         " \n",
         "    def delete_node_at_pos(self, pos):\n",
         "        cur_node = self.head\n",
         "        if pos == 0:\n",
-        "            if cur_node.next:\n",
-        "                cur_node.next.prev = None\n",
-        "            self.head = cur_node.next\n",
+        "            if cur_node.next is None:\n",
+        "                self.head = None\n",
+        "                self.tail = None\n",
+        "            else:\n",
+        "                next_node = cur_node.next\n",
+        "                next_node.prev = None\n",
+        "                self.head = next_node\n",
         "            cur_node = None\n",
         "            return\n",
         "        prev = None\n",
@@ -123,10 +139,24 @@
         "            count += 1\n",
         "        if cur_node is None:\n",
         "            return\n",
-        "        if cur_node.next:\n",
+        "        if cur_node.next is None:\n",
+        "            prev.next = None\n",
+        "            self.tail = prev\n",
+        "        else:\n",
+        "            prev.next = cur_node.next\n",
         "            cur_node.next.prev = prev\n",
-        "        prev.next = cur_node.next\n",
         "        cur_node = None\n",
+        " \n",
+        "    def reverse(self):\n",
+        "        temp = None\n",
+        "        cur_node = self.head\n",
+        "        while cur_node:\n",
+        "            temp = cur_node.prev\n",
+        "            cur_node.prev = cur_node.next\n",
+        "            cur_node.next = temp\n",
+        "            cur_node = cur_node.prev\n",
+        "        if temp:\n",
+        "            self.head = temp.prev\n",
         " \n",
         "    def print_list(self):\n",
         "        cur_node = self.head\n",
@@ -144,6 +174,7 @@
         "dllist.insert_after_node(dllist.head.next, \"F\")\n",
         "dllist.delete_node(\"B\")\n",
         "dllist.delete_node_at_pos(3)\n",
+        "dllist.reverse()\n",
         "dllist.print_list()"
       ]
     }
