Создано с помощью Colaboratory

--- a/OOP.ipynb
+++ b/OOP.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOvtSkXIuPZFs9yTwNGSlh3",
+      "authorship_tag": "ABX9TyPnBfTi6yVmEoEnKATZ4wBd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,36 +28,54 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 86,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "D_FIh8qmeFfL",
-        "outputId": "d5d049a0-9888-452b-fede-d23840eb8cad"
+        "outputId": "f783bb06-a0dc-4578-8280-86a3f5be77a4"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "10 10\n"
+            "{'number': '9012', 'owner': 'Bob', 'balance': 0}\n"
           ]
         }
       ],
       "source": [
-        "class Father:\n",
-        "    def __init__(self, param):\n",
-        "        self.ol = param\n",
+        "accounts = [\n",
+        "  {'number': '1234', 'owner': 'John', 'balance': 1000},\n",
+        "  {'number': '5678', 'owner': 'Jane', 'balance': 500},\n",
+        "  {'number': '9012', 'owner': 'Bob', 'balance': 2000}\n",
+        "]\n",
         "\n",
-        "class Child(Father):\n",
-        "    def __init__(self, param):\n",
-        "        super().__init__(param)\n",
-        "        self.o2 = param\n",
-        " \n",
-        "obj = Child(10)\n",
+        "def get_account_by_number(number):\n",
+        "  i = 0\n",
+        "  while i < len(accounts):\n",
+        "    for val in accounts[i].values():\n",
+        "      if val == number:\n",
+        "        return accounts[i]\n",
+        "    i += 1\n",
         "\n",
-        "print(\"%d %d\" % (obj.ol, obj.o2))"
+        "def deposit(account, amount):\n",
+        "  account['balance'] += amount\n",
+        "\n",
+        "def withdraw(account, amount):\n",
+        "  if account['balance'] >= amount:\n",
+        "    account['balance'] -= amount\n",
+        "    return True\n",
+        "  else:\n",
+        "    return False\n",
+        "\n",
+        "def main():\n",
+        "  acc = get_account_by_number('9012')\n",
+        "  deposit(acc, 200)\n",
+        "  withdraw(acc, 2200)\n",
+        "  print(acc)\n",
+        "main()"
       ]
     }
   ]
