Создано с помощью Colaboratory

--- a/OOP.ipynb
+++ b/OOP.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPnBfTi6yVmEoEnKATZ4wBd",
+      "authorship_tag": "ABX9TyPFTwWFcKw7MP2BtsAwfLcu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,24 +28,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 100,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "D_FIh8qmeFfL",
-        "outputId": "f783bb06-a0dc-4578-8280-86a3f5be77a4"
+        "outputId": "d9db0660-4a6f-41f2-935b-9d1b0219d467"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'number': '9012', 'owner': 'Bob', 'balance': 0}\n"
+            "{'number': '9012', 'owner': 'Bob', 'balance': 0}\n",
+            "9012, Bob, 0\n"
           ]
         }
       ],
       "source": [
+        "# Procedural programming\n",
+        "\n",
         "accounts = [\n",
         "  {'number': '1234', 'owner': 'John', 'balance': 1000},\n",
         "  {'number': '5678', 'owner': 'Jane', 'balance': 500},\n",
@@ -75,7 +78,35 @@
         "  deposit(acc, 200)\n",
         "  withdraw(acc, 2200)\n",
         "  print(acc)\n",
-        "main()"
+        "\n",
+        "main()\n",
+        "\n",
+        "\n",
+        "# Object-oriented programming\n",
+        "\n",
+        "class Account:\n",
+        "  def __init__(self, number, owner, balance):\n",
+        "    self.number = number\n",
+        "    self.owner = owner\n",
+        "    self.balance = balance\n",
+        "  \n",
+        "  def __str__(self):\n",
+        "    return f'{self.number}, {self.owner}, {self.balance}'\n",
+        "  \n",
+        "  def deposit(self, amount):\n",
+        "    self.balance += amount\n",
+        "\n",
+        "  def withdraw(self, amount):\n",
+        "    if self.balance >= amount:\n",
+        "      self.balance -= amount\n",
+        "      return True\n",
+        "    else:\n",
+        "      return False\n",
+        "\n",
+        "bob = Account('9012', 'Bob', 2000)\n",
+        "bob.deposit(200)\n",
+        "bob.withdraw(2200)\n",
+        "print(bob)"
       ]
     }
   ]
