Создано с помощью Colaboratory

--- a/data_types.ipynb
+++ b/data_types.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNBRXxz1hy+KDVCKfwPVc8y",
+      "authorship_tag": "ABX9TyPh6UCtTsNr3rhoJNzDBUbb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,30 +28,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 112,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "t3b_WZV2TBrX",
-        "outputId": "fd5b2e0a-38af-4c49-d3b2-1224af27ba09"
+        "outputId": "309d3ebc-74af-4ae8-f407-4681e7d9ffb6"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "16\n",
-            "24\n",
-            "28\n",
-            "32\n",
-            "40\n",
-            "49\n",
-            "56\n",
-            "64\n",
-            "144\n",
-            "216\n",
-            "1072\n"
+            "None: 16 bytes\n",
+            "float: 24 bytes\n",
+            "int: 28 bytes\n",
+            "complex: 32 bytes\n",
+            "tuple: 40 bytes\n",
+            "string: 49 bytes\n",
+            "list: 56 bytes\n",
+            "dict: 64 bytes\n",
+            "function: 144 bytes\n",
+            "set: 216 bytes\n",
+            "Class: 1072 bytes\n"
           ]
         }
       ],
@@ -82,17 +82,17 @@
         "class ClassEmpty:\n",
         "  pass\n",
         "\n",
-        "print(sys.getsizeof(None))\n",
-        "print(sys.getsizeof(float_number))\n",
-        "print(sys.getsizeof(int_number))\n",
-        "print(sys.getsizeof(complex_number))\n",
-        "print(sys.getsizeof(tuple_empty))\n",
-        "print(sys.getsizeof(string_empty))\n",
-        "print(sys.getsizeof(list_empty))\n",
-        "print(sys.getsizeof(dict_empty))\n",
-        "print(sys.getsizeof(function_empty))\n",
-        "print(sys.getsizeof(set_empty))\n",
-        "print(sys.getsizeof(ClassEmpty))"
+        "print(f'None: {sys.getsizeof(None)} bytes')\n",
+        "print(f'float: {sys.getsizeof(float_number)} bytes')\n",
+        "print(f'int: {sys.getsizeof(int_number)} bytes')\n",
+        "print(f'complex: {sys.getsizeof(complex_number)} bytes')\n",
+        "print(f'tuple: {sys.getsizeof(tuple_empty)} bytes')\n",
+        "print(f'string: {sys.getsizeof(string_empty)} bytes')\n",
+        "print(f'list: {sys.getsizeof(list_empty)} bytes')\n",
+        "print(f'dict: {sys.getsizeof(dict_empty)} bytes')\n",
+        "print(f'function: {sys.getsizeof(function_empty)} bytes')\n",
+        "print(f'set: {sys.getsizeof(set_empty)} bytes')\n",
+        "print(f'Class: {sys.getsizeof(ClassEmpty)} bytes')"
       ]
     }
   ]
