Создано с помощью Colaboratory

--- a/property.ipynb
+++ b/property.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMasjEfI2dK8if1s9sX/BMs",
+      "authorship_tag": "ABX9TyN4McPthZaIM+UrwuXnToZh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 56,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "eJa4ET0wT9Wv",
-        "outputId": "dbbad6fb-fdb1-4e6a-8594-6fa76eba633d"
+        "outputId": "b39b245a-c5b6-44e9-ddc2-5f25e62d72f2"
       },
       "outputs": [
         {
@@ -42,7 +42,8 @@
           "name": "stdout",
           "text": [
             "Иван : 0\n",
-            "Иван : 2000\n"
+            "Иван : 2000\n",
+            "Иван : 3000\n"
           ]
         }
       ],
@@ -66,7 +67,7 @@
         "\n",
         "  @balance.setter\n",
         "  def balance(self, value):\n",
-        "      self._balance = value\n",
+        "      self._balance += value\n",
         "\n",
         "class ListVisitors():\n",
         "  def __init__(self):\n",
@@ -113,6 +114,8 @@
         "service.create_visitor('Иван', 'ivan12828828')\n",
         "service.show_visitors()\n",
         "service.set_credit_to_visitor('Иван', 2000)\n",
+        "service.show_visitors()\n",
+        "service.set_credit_to_visitor('Иван', 1000)\n",
         "service.show_visitors()"
       ]
     }
