--- a/gifts.ipynb
+++ b/gifts.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNw1McsA6jGgjP1xxXBIhw5",
+      "authorship_tag": "ABX9TyO82BFZb3syIxCYQaX7t59D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,23 +28,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 99,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "nOV1wL7Qossl",
-        "outputId": "e55e3ca3-9a76-4ad7-dcc3-a99b15f2930e"
+        "outputId": "5f15c86f-8d54-463a-e58a-15df1166be49"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[0.02, 0.03, 0.04, 0.01, 0.03, 0.07, 0.03, 0.03, 0.07, 0.02, 0.03, 0.04, 0.02, 0.02, 0.03, 0.03, 0.06, 0.1, 0.01, 0.01, 0.05, 0.01, 0.06, 0.07, 0.01, 0.04, 0.05, 0.02, 0.02, 0.02, 0.0, 0.05, 0.07, 0.01, 0.0, 0.05, 0.0, 0.07, 0.04, 0.03, 0.06, 0.04, 0.04, 0.05, 0.07, 0.03, 0.07, 0.05, 0.04, 0.07, 0.02, 0.0, 0.04, 0.07, 0.02, 0.04, 0.04, 0.01, 0.0, 0.01, 0.03, 0.06, 0.04, 0.0, 0.04, 0.05, 0.03, 0.03, 0.05, 0.02, 0.03, 0.04, 0.01, 0.02, 0.05, 0.03, 0.01, 0.06, 0.01, 0.05, 0.07, 0.02, 0.05, 0.08, 0.02, 0.05, 0.03, 0.01, 0.01, 0.04, 0.01, 0.04, 0.06, 0.04, 0.04, 0.06, 0.02, 0.02, 0.05, 0.02, 0.04, 0.06, 0.03, 0.04, 0.02, 0.01, 0.03, 0.02, 0.02, 0.03, 0.05, 0.0, 0.02, 0.03, 0.01, 0.02, 0.03, 0.01, 0.06, 0.08, 0.02, 0.01, 0.05, 0.01, 0.01, 0.09, 0.03, 0.05, 0.03, 0.05, 0.03, 0.07, 0.0, 0.06, 0.11, 0.02, 0.03, 0.06, 0.01, 0.04, 0.07, 0.02, 0.03, 0.05, 0.04, 0.05, 0.04, 0.03, 0.04, 0.02]\n",
-            "150\n",
-            "0.11\n",
-            "0.0\n"
+            "[0, 11, 12, 0, 5, 13, 1, 3, 14, 0, 5, 10, 0, 8, 14, 0]\n",
+            "16\n",
+            "14\n",
+            "0\n"
           ]
         }
       ],
@@ -57,13 +57,16 @@
         "\n",
         "toys = []\n",
         "weights = []\n",
-        "for i in range(10):\n",
+        "for i in range(5):\n",
         "  toys.append(a)\n",
         "  toys.append(b)\n",
         "  toys.append(c)\n",
-        "  weights.append(0.1)\n",
-        "  weights.append(0.2)\n",
-        "  weights.append(0.3)\n",
+        "  weights.append(0.01)\n",
+        "  weights.append(0.5)\n",
+        "  weights.append(0.99)\n",
+        "\n",
+        "toys.append('nothing')\n",
+        "weights.append(0.0)\n",
         "\n",
         "\n",
         "def lottery():\n",
@@ -84,12 +87,12 @@
         "    a = lottery()\n",
         "    if a == n:\n",
         "      count += 1\n",
-        "  return count / hundred\n",
+        "  return count\n",
         "\n",
         "\n",
         "def last():\n",
         "  m = []\n",
-        "  for j in range(5):\n",
+        "  for j in range(1):\n",
         "    for i in range(len(toys)):\n",
         "      m.append(check(i))\n",
         "  return m\n",
