Создано с помощью Colaboratory

--- a/gifts.ipynb
+++ b/gifts.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNzEEvHLquLjMCDoHbtL/sT",
+      "authorship_tag": "ABX9TyMkRFT20TdRWmXTIi6qAlIg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,23 +28,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": 102,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "nOV1wL7Qossl",
-        "outputId": "4a9f3584-030f-46f5-900b-7b55c612c731"
+        "outputId": "6d1f1a58-7f75-4a37-99c5-c2615d30e9a6"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[5, 4, 5, 7, 8, 9, 3, 13, 10, 5, 10, 7, 5, 9, 2, 0]\n",
-            "16\n",
-            "13\n",
-            "0\n"
+            "[0.09, 0.14, 0.09, 0.1, 0.05, 0.11, 0.13, 0.09, 0.1, 0.0]\n",
+            "10\n",
+            "0.14\n",
+            "0.0\n"
           ]
         }
       ],
@@ -57,7 +57,7 @@
         "\n",
         "toys = []\n",
         "weights = []\n",
-        "for i in range(5):\n",
+        "for i in range(3):\n",
         "  toys.append(a)\n",
         "  toys.append(b)\n",
         "  toys.append(c)\n",
@@ -87,7 +87,7 @@
         "    a = lottery()\n",
         "    if a == n:\n",
         "      count += 1\n",
-        "  return count\n",
+        "  return count / hundred\n",
         "\n",
         "\n",
         "def last():\n",
