--- a/split.ipynb
+++ b/split.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOs8VOZDILueYMplWJaoWuG",
+      "authorship_tag": "ABX9TyOqhzJ89g40bZtvD2fu4fba",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,39 +28,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gYMG8bvE6XQX",
-        "outputId": "5d0b5e2a-4925-4ef6-f220-cb0e29c35b2b"
+        "outputId": "f1327d55-da03-42dd-896a-d039d6861a6c"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "a a\n",
-            "aa\n",
-            "aa\n",
-            "['a', 'da', 'ad']\n"
+            "Line 1:3words\n",
+            "Line 2:2words\n",
+            "Line 3:1words\n"
           ]
         }
       ],
       "source": [
-        "a = ['a a','\\n','a','a','\\n','a','a','\\n']\n",
+        "a = ['a a a','\\n','a a','\\n','a','\\n']\n",
         "\n",
-        "count = 0\n",
+        "count = 1\n",
         "i = 0\n",
         "while i < len(a):\n",
-        "  if a[i] == '\\n':\n",
+        "  if a[i] != '\\n':\n",
+        "    print(f'Line {count}:{len(a[i].split(\" \"))}words')\n",
         "    count+=1\n",
-        "  print(a[i], end='')\n",
-        "  i+=1\n",
-        "\n",
-        "b = 'a da ad'\n",
-        "print(b.split(' '))"
+        "  i+=1"
       ]
     }
   ]
