Создано с помощью Colaboratory

--- a/chess.ipynb
+++ b/chess.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNZQ8NO9e+PwZNRqdOGKJDp",
+      "authorship_tag": "ABX9TyMegY9cpUAq3mDPPNT0lX5U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wGpJU3UpBLW9",
-        "outputId": "e5e8eda2-9def-47d6-b21c-c0bc5739eced"
+        "outputId": "b8b5cbde-79d9-4e2c-a6b5-0265ba4b4b08"
       },
       "outputs": [
         {
@@ -43,10 +43,18 @@
           "text": [
             "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 1. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 1. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
+            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 1. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]]\n"
           ]
@@ -56,23 +64,65 @@
         "import numpy as np\n",
         "\n",
         "class Board:\n",
-        "  def __init__(self, rotation: int, x_old: int, y_old: int):\n",
+        "  def __init__(self):\n",
         "    self.board = np.zeros((8,8))\n",
-        "    self.rotation = rotation\n",
-        "    self.x_old = x_old\n",
-        "    self.y_old = y_old\n",
         "\n",
         "  def __str__(self):\n",
         "    return str(self.board)\n",
         "\n",
-        "# x_new: int, y_new: int\n",
-        "  def move(self):\n",
-        "    self.board[2][1] = 1\n",
+        "  def put_figure(self, x, y):\n",
+        "    self.board[x][y] = 1\n",
+        "\n",
+        "  def rotate(self):\n",
+        "    self.board = np.rot90(self.board, 2)\n",
         "\n",
         "\n",
-        "b = Board(0, 0, 0)\n",
-        "b.move()\n",
-        "print(b)"
+        "class Figure:\n",
+        "  def __init__(self, x, y):\n",
+        "    self.__x = x\n",
+        "    self.__y = y\n",
+        "\n",
+        "  @property\n",
+        "  def x(self):\n",
+        "    return self.__x\n",
+        "\n",
+        "  @x.setter\n",
+        "  def x(self, x):\n",
+        "    self.__x = x\n",
+        "\n",
+        "  @property\n",
+        "  def y(self):\n",
+        "    return self.__y\n",
+        "\n",
+        "  @y.setter\n",
+        "  def y(self, y):\n",
+        "    self.__y = y\n",
+        "\n",
+        "\n",
+        "class Game:\n",
+        "  def __init__(self):\n",
+        "    self.board = Board()\n",
+        "    self.figures = [Figure(2,2), Figure(3,3)]\n",
+        "\n",
+        "  def print_board(self):\n",
+        "    print(self.board)\n",
+        "\n",
+        "  def start(self):\n",
+        "    for f in self.figures:\n",
+        "      self.board.put_figure(f.x, f.y)\n",
+        "\n",
+        "  def rotate(self):\n",
+        "    self.board.rotate()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "game = Game()\n",
+        "game.start()\n",
+        "game.print_board()\n",
+        "game.rotate()\n",
+        "game.print_board()"
       ]
     }
   ]
