Создано с помощью Colaboratory

--- a/chess.ipynb
+++ b/chess.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMegY9cpUAq3mDPPNT0lX5U",
+      "authorship_tag": "ABX9TyMgLSyNdvsyp9Mz3nRho9MW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 179,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wGpJU3UpBLW9",
-        "outputId": "b8b5cbde-79d9-4e2c-a6b5-0265ba4b4b08"
+        "outputId": "3595b5f6-8060-4e05-8fec-fe95f5b17ee0"
       },
       "outputs": [
         {
@@ -43,19 +43,38 @@
           "text": [
             "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 1. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 1.]]\n",
+            "----------------------------\n",
+            "[[1. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 1. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
+            "----------------------------\n",
             "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 1. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 1. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 1.]]\n",
+            "----------------------------\n",
+            "[[1. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 1. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 1. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]]\n"
           ]
         }
@@ -65,22 +84,29 @@
         "\n",
         "class Board:\n",
         "  def __init__(self):\n",
-        "    self.board = np.zeros((8,8))\n",
+        "    self.__board = np.zeros((8,8))\n",
         "\n",
         "  def __str__(self):\n",
-        "    return str(self.board)\n",
-        "\n",
-        "  def put_figure(self, x, y):\n",
-        "    self.board[x][y] = 1\n",
+        "    return f'{self.__board}'\n",
         "\n",
         "  def rotate(self):\n",
-        "    self.board = np.rot90(self.board, 2)\n",
+        "    self.__board = np.rot90(self.__board, 2)\n",
+        "\n",
+        "  def set_piece(self, x, y):\n",
+        "    self.__board[x][y] = 1\n",
+        "\n",
+        "  def delete_piece(self, x, y):\n",
+        "    self.__board[x][y] = 0\n",
         "\n",
         "\n",
-        "class Figure:\n",
+        "\n",
+        "class Piece:\n",
         "  def __init__(self, x, y):\n",
         "    self.__x = x\n",
         "    self.__y = y\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    return f'x = {self.__x}, y = {self.__y}'\n",
         "\n",
         "  @property\n",
         "  def x(self):\n",
@@ -99,30 +125,46 @@
         "    self.__y = y\n",
         "\n",
         "\n",
+        "king = Piece(0, 0)\n",
+        "\n",
+        "\n",
         "class Game:\n",
         "  def __init__(self):\n",
-        "    self.board = Board()\n",
-        "    self.figures = [Figure(2,2), Figure(3,3)]\n",
+        "    self.__new_board = Board()\n",
+        "    self.__chess_pieces = [king]\n",
         "\n",
-        "  def print_board(self):\n",
-        "    print(self.board)\n",
-        "\n",
-        "  def start(self):\n",
-        "    for f in self.figures:\n",
-        "      self.board.put_figure(f.x, f.y)\n",
+        "  def __str__(self):\n",
+        "    return str(self.__new_board)\n",
         "\n",
         "  def rotate(self):\n",
-        "    self.board.rotate()\n",
+        "    self.__new_board.rotate()\n",
         "\n",
-        "\n",
+        "  def move(self, item, x_new, y_new):\n",
+        "    for piece in self.__chess_pieces:\n",
+        "      if piece == item:\n",
+        "        # self.__new_board.delete_piece(piece.x, piece.y)\n",
+        "        self.__new_board.set_piece(x_new, y_new)\n",
+        "        piece.x = x_new\n",
+        "        piece.y = y_new\n",
         "\n",
         "\n",
         "\n",
         "game = Game()\n",
-        "game.start()\n",
-        "game.print_board()\n",
+        "game.move(king, 0, 0)\n",
         "game.rotate()\n",
-        "game.print_board()"
+        "print(game)\n",
+        "print('----------------------------')\n",
+        "game.move(king, 1, 1)\n",
+        "game.rotate()\n",
+        "print(game)\n",
+        "print('----------------------------')\n",
+        "game.move(king, 2, 2)\n",
+        "game.rotate()\n",
+        "print(game)\n",
+        "print('----------------------------')\n",
+        "game.move(king, 3, 3)\n",
+        "game.rotate()\n",
+        "print(game)"
       ]
     }
   ]
