Создано с помощью Colaboratory

--- a/chess.ipynb
+++ b/chess.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMgLSyNdvsyp9Mz3nRho9MW",
+      "authorship_tag": "ABX9TyOE6d5gXr6y0JyCYoX/g8Tv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -147,6 +147,8 @@
         "        piece.x = x_new\n",
         "        piece.y = y_new\n",
         "\n",
+        "\n",
+        "# copy matrix\n",
         "\n",
         "\n",
         "game = Game()\n",
